based qemu patch

--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@
 !.gitignore
 !0001-Allow-sudo.patch
 !0001-Disable-input-grab-on-startup.patch
+!0001-cringe-input-patch.patch
 !configuration.nix
 !hardware.nix
