more pipewire changes/fixes

--- a/mic-setup/pw-loopback-nodes.conf
+++ b/mic-setup/pw-loopback-nodes.conf
@@ -54,4 +54,22 @@ context.modules = [
             }
         }
     }
+
+
+    # for mic spam from spotify I want to listen at a lower volume than what goes through the mic
+    {   name = libpipewire-module-loopback
+        args = {
+            node.description = "Music Proxy"
+
+            capture.props = {
+                node.name = "MusicProxySink"
+                media.class = "Audio/Sink"
+                audio.position = [ FL FR ]
+            }
+            playback.props = {
+                node.name = "MusicProxySource"
+                audio.position = [ FL FR ]
+            }
+        }
+    }
 ]
