use new rust program instead of wireplumber scripts

--- a/mic-setup/pw-loopback-nodes.conf
+++ b/mic-setup/pw-loopback-nodes.conf
@@ -72,4 +72,22 @@ context.modules = [
             }
         }
     }
+
+    # css/gmod
+    {   name = libpipewire-module-loopback
+        args = {
+            node.description = "Steam Proxy"
+
+            capture.props = {
+                node.name = "SteamProxySink"
+                media.class = "Audio/Sink"
+                audio.position = [ FL FR ]
+            }
+            playback.props = {
+                node.name = "SteamProxySource"
+                audio.position = [ FL FR ]
+                node.dont-reconnect = true
+            }
+        }
+    }
 ]
