fix counter strike mic routing

--- a/mic-setup/pw-loopback-nodes.conf
+++ b/mic-setup/pw-loopback-nodes.conf
@@ -85,6 +85,7 @@ context.modules = [
             }
             playback.props = {
                 node.name = "SteamProxySource"
+                media.class = "Audio/Source"
                 audio.position = [ FL FR ]
                 node.dont-reconnect = true
             }
