--- a/mic-setup/pw-loopback-nodes.conf
+++ b/mic-setup/pw-loopback-nodes.conf
@@ -31,6 +31,7 @@ context.modules = [
             playback.props = {
                 node.name = "LiveSynthSource"
                 target.object = "MicProxySink"
+                media.class = "Audio/Source"
                 audio.position = [ FL FR ]
             }
         }
@@ -50,6 +51,7 @@ context.modules = [
             playback.props = {
                 node.name = "EasyEffectsProxySource"
                 target.object = "MicProxySink"
+                media.class = "Audio/Source"
                 audio.position = [ FL FR ]
             }
         }
@@ -68,6 +70,7 @@ context.modules = [
             }
             playback.props = {
                 node.name = "MusicProxySource"
+                media.class = "Audio/Source"
                 audio.position = [ FL FR ]
             }
         }
